--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,9 +1,1 @@
-c1{
-    font-size: 20px;
-    color: rgb(0, 247, 255);
-}
-
-c2{
-    font-size: 100px;
-    color: rgb(217, 255, 0);
-}
+/*Stylesheet not currently being used in the current stage of the website.*/
