--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,1 +1,18 @@
-/*Stylesheet not currently being used in the current stage of the website.*/
+.textAlignCenter {
+    text-align: center;
+}
+
+.textAlignLeft {
+    text-align: left;
+}
+
+.textAlignRight {
+    text-align: right;
+}
+
+.imageAlignCenter {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 5%;
+  }
