--- a/stylesheet.css
+++ b/stylesheet.css
@@ -19,14 +19,10 @@
 
 .textWhite {
     color: white;
-  }
+}
 
-  <!-- HTML !-->
-  <button class="button-2" role="button">Button 2</button>
-  
-  /* CSS */
-  .button-2 {
-    background-color: rgba(51, 51, 51, 0.05);
+.button1{
+    background-color: #12d8ef;
     border-radius: 8px;
     border-width: 0;
     color: #333333;
@@ -46,4 +42,6 @@
     user-select: none;
     -webkit-user-select: none;
     touch-action: manipulation;
-  }
+}
+
+.button1:hover {background: #FFF307}
