--- a/stylesheet.css
+++ b/stylesheet.css
@@ -40,17 +40,32 @@
     touch-action: manipulation;
 }
 
-.button1:hover {background: #FFF307}
+.button1:hover {
+    background: #FFF307
+}
 
 .footerImage {
+    transition: all .2s ease-in-out;
     height: 30px;
     width: 30px;
 }
 
+.footerImage:hover {
+    transform: scale(1.15);
+}
+
 .headerText {
     color: #FFF307;
+    user-select: none;
+    text-decoration: none;
+    text-decoration-color: #FFF307;
 }
 
 .headerText:hover {
-    text-decoration: underline;
+    text-decoration: bold;
+    color: #FFF307;
+}
+
+.invisText {
+    user-select: none;
 }
