--- a/stylesheet.css
+++ b/stylesheet.css
@@ -78,3 +78,12 @@
     color: #225dc6;
     cursor: pointer;
 }
+
+.fourohfour {
+    top: 50%;
+    left: 50%;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    font-family: Helvetica;
+    text-align: center;
+}
