--- a/stylesheet.css
+++ b/stylesheet.css
@@ -86,4 +86,6 @@
     transform: translate(-50%, -50%);
     font-family: Helvetica;
     text-align: center;
+    color: black;
+    text-decoration: none;
 }
